[package]
name = "ppm"
version = "0.1.0"
authors = ["rabahFr <oumessaoud1@hotmail.fr>", "Gautier", "Jules", "Aymen Chabchoub"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#[dependencies.pyo3]
#version = "0.9.0-alpha.1"
#features = ["extension-module"]

#[lib]
#name = "imgppm"
#crate-type = ["cdylib"]